--- a/assets/html/lands.html
+++ b/assets/html/lands.html
@@ -14,22 +14,22 @@
 <body class="bg-dark">
     <main>
         <!-- header start  -->
-        <div class="br d-flex justify-content-center align-items-center">
-            <header class="text-center py-5">
-            <h1 class="text-warning">
-                سرزمین های انیمه ی ناروتو
-            </h1>
+        <header class="br d-flex justify-content-center align-items-center">
+            <div class="text-center py-5">
+                <h1 class="text-warning">
+                    سرزمین های انیمه ی ناروتو
+                </h1>
+            </div>
         </header>
-        </div>
         <!-- header end -->
 
         <!-- category start -->
         <section class="container px-5">
             <div class="row">
-                <a class="col-3 text-decoration-none text-center">
+                <a href="lands/land-of-fire.html" class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/fire.jpg" alt="land_of_fire">
+                            <img class="dynamic" src="../img/lands/fire.jpg" alt="land_of_fire">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آتش
@@ -37,10 +37,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/lightning.png" alt="land_of_lightining">
+                            <img class="dynamic" src="../img/lands/lightning.png" alt="land_of_lightining">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آذرخش
@@ -48,10 +48,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/water.jpg" alt="land_of_water">
+                            <img class="dynamic" src="../img/lands/water.jpg" alt="land_of_water">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آب
@@ -59,23 +59,21 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/wind.jpg" alt="land_of_wind">
+                            <img class="dynamic" src="../img/lands/wind.jpg" alt="land_of_wind">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین باد
                         </h1>
                     </div>
                 </a>
-            </div>
-            
-            <div class="row py-5">
-                <a class="col-3 text-decoration-none text-center">
+
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/earth.png" alt="land_of_earth">
+                            <img class="dynamic" src="../img/lands/earth.png" alt="land_of_earth">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین زمین
@@ -83,10 +81,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/rain.png" alt="land_of_rain">
+                            <img class="dynamic" src="../img/lands/rain.png" alt="land_of_rain">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین باران
@@ -94,10 +92,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/sound.jpeg" alt="land_of_sound">
+                            <img class="dynamic" src="../img/lands/sound.jpeg" alt="land_of_sound">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین صدا
@@ -105,23 +103,21 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/waterfall.jpg" alt="land_of_waterfall">
+                            <img class="dynamic" src="../img/lands/waterfall.jpg" alt="land_of_waterfall">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آبشار
                         </h1>
                     </div>
                 </a>
-            </div>
 
-            <div class="row py-5">
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/hot_water.jpg" alt="land_of_hotwater">
+                            <img class="dynamic" src="../img/lands/hot_water.jpg" alt="land_of_hotwater">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آب داغ
@@ -129,10 +125,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/grass.jpg" alt="land_of_grass">
+                            <img class="dynamic" src="../img/lands/grass.jpg" alt="land_of_grass">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین چمن
@@ -140,10 +136,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/iron.jpg" alt="land_of_iron">
+                            <img class="dynamic" src="../img/lands/iron.jpg" alt="land_of_iron">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین آهن
@@ -151,23 +147,21 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/river.jpg" alt="land_of_river">
+                            <img class="dynamic" src="../img/lands/river.jpg" alt="land_of_river">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین رودخانه
                         </h1>
                     </div>
                 </a>
-            </div>
 
-            <div class="row py-5">
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/rock.jpg" alt="land_of_rock">
+                            <img class="dynamic" src="../img/lands/rock.jpg" alt="land_of_rock">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین سنگ
@@ -175,10 +169,10 @@
                     </div>
                 </a>
 
-                <a class="col-3 text-decoration-none text-center">
+                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
-                            <img src="../img/lands/wave.jpg" alt="land_of_wave">
+                            <img class="dynamic" src="../img/lands/wave.jpg" alt="land_of_wave">
                         </div>
                         <h1 class="text-warning py-4">
                             سرزمین موج
@@ -192,9 +186,7 @@
 
     </main>
     <!-- bootstrap js -->
-    <script src="assets/js/js-bs/bootstrap.bundle.js"></script>
-    <script src="assets/js/slider.js"></script>
-    <script src="assets/js/scrol_top.js"></script>
+    <script src="../js/js-bs/bootstrap.bundle.js"></script>
 </body>
 
 </html>
