--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
 
         <!-- header start !-->
         <header class="my-5 slider">>
-            <div class="slide_items1 slide active d-flex flex-column py-5 px-5">
+            <div class="slide_items1 slide active flex-column py-5 px-5">
                 <h1 class="mb-5 fw-bolder fs-1 text-warning">دوره ی جنگ های قبیله ای ⚔️</h1>
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     پیش از تأسیس کونوها ، قبایل نینجا در نبردهای بی‌پایان برای قدرت و بقا می‌جنگیدند ...
                 </p>
-                <a class="border border-warning Width_10 rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
+                <span class="pt-5 mt-3">
+                    <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
+                </span>
             </div>
 
             <!-- Slide 2 -->
@@ -56,8 +58,10 @@
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     بیجوها، موجودات افسانه‌ای دم‌دار، پس از جدایی از چاکرای ده‌دمی در جهان پراکنده شدند...
                 </p>
-                <a class="border border-warning Width_10 rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
+                <span class="pt-5 mt-3">
+                    <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
+                </span>
             </div>
 
             <!-- Slide 3 -->
@@ -66,8 +70,10 @@
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     آکاتسکی با گردهم‌آوردن خطرناک‌ترین نینجاهای سرکش، به سازمانی مخوف تبدیل شد...
                 </p>
-                <a class="border border-warning Width_10 rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
+                <span class="pt-5 mt-3">
+                    <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
+                </span>
             </div>
         </header>
         <!-- header end !-->
@@ -76,7 +82,9 @@
 
         <!-- none start !-->
         <section class="my-5 In_made_err_bg d-flex align-items-center justify-content-center">
-            <h1 class="text-warning fw-bolder fs_BIG">در دست ساخت ...</h1>
+            <div class="container d-flex align-items-center justify-content-center">
+                <h1 class="text-warning fw-bolder fs_BIG">در دست ساخت ...</h1>
+            </div>
         </section>
         <!-- none end !-->
 
@@ -84,8 +92,8 @@
 
         <!-- footer start !-->
         <footer class="py-5">
-            <div class="container row">
-                <div class="col-4">
+            <div class="container row justify-content-between d-flex">
+                <div class="col-6 col-sm-4 col-md-3 border-end border-warning border-3">
                     <h3 class="text-warning mb-4">درباره ی ما</h3>
                     <ul>
                         <li>
@@ -95,7 +103,7 @@
                         </li>
                         <li>
                             <a href="" class="text-decoration-none text-white">
-                                🤙 راه های ارتباط با ما
+                                🤙 ارتباط با ما
                             </a>
                         </li>
                         <li>
@@ -105,22 +113,22 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-4">
+                <div class="col-6 col-sm-4 col-md-3 border-end border-warning border-3">
                     <h3 class="text-warning mb-4">ما را دنبال کنید</h3>
                     <ul>
                         <li>
                             <a href="" class="py-3 text-decoration-none text-white">
-                                <img class="footer_icon" src="assets/icons/minimal.png" alt="rubika-icon">
+                                بله
                             </a>
                         </li>
                         <li>
                             <a href="" class="py-3 text-decoration-none text-white">
-                                <img class="footer_icon" src="assets/icons/eitaa-icon-colorful.png" alt="eita-icon">
+                                ایتا
                             </a>
                         </li>
                         <li>
                             <a href="" class="py-3 text-decoration-none text-white">
-                                <img class="footer_icon" src="assets/icons/bale-color.png" alt="bale-icon">
+                                روبیکا
                             </a>
                         </li>
                     </ul>
