--- a/assets/html/lands.html
+++ b/assets/html/lands.html
@@ -26,7 +26,7 @@
         <!-- category start -->
         <section class="container px-5">
             <div class="row">
-                <a href="lands/land-of-fire.html" class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-fire.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/fire.jpg" alt="land_of_fire">
@@ -37,7 +37,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-lightning.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/lightning.png" alt="land_of_lightining">
@@ -48,7 +48,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-water.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/water.jpg" alt="land_of_water">
@@ -59,7 +59,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-wind.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/wind.jpg" alt="land_of_wind">
@@ -70,7 +70,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-earth.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/earth.png" alt="land_of_earth">
@@ -81,7 +81,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a href="lands/land-of-rain.html" class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/rain.png" alt="land_of_rain">
@@ -92,7 +92,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/sound.jpeg" alt="land_of_sound">
@@ -103,7 +103,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/waterfall.jpg" alt="land_of_waterfall">
@@ -114,7 +114,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/hot_water.jpg" alt="land_of_hotwater">
@@ -125,7 +125,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/grass.jpg" alt="land_of_grass">
@@ -136,7 +136,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/iron.jpg" alt="land_of_iron">
@@ -147,7 +147,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/river.jpg" alt="land_of_river">
@@ -158,7 +158,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/rock.jpg" alt="land_of_rock">
@@ -169,7 +169,7 @@
                     </div>
                 </a>
 
-                <a class="col-md-3 col-sm-4 col-6 pb-4 text-decoration-none text-center">
+                <a class="col-lg-3 col-md-4 col-sm-6 col-12 pb-4 text-decoration-none text-center">
                     <div class="border border-3 rounded-3 border-warning">
                         <div class="lands_img d-flex justify-content-center overflow-hidden">
                             <img class="dynamic" src="../img/lands/wave.jpg" alt="land_of_wave">
