--- a/assets/html/lands/land-of-earth.html
+++ b/assets/html/lands/land-of-earth.html
@@ -15,34 +15,28 @@
         <!-- header start -->
         <header class="container">
             <div class="col-md-6 rounded-top border border-3 border-warning">
-                <img class="img-fluid" src="../../img/lands/fire.jpg" alt="">
+                <img class="img-fluid" src="../../img/lands/earth.png" alt="">
             </div>
             <div class="col-md-6 rounded-bottom border border-3 border-top-0 border-warning py-3 px-4">
                 <h1 class="text-warning">
-                    نام : سرزمین آتش
+                    نام : سرزمین زمین
                 </h1>
                 <hr class="text-warning">
                 <h4 class="text-white">
-                    دهکده : کونوها (دهکده ی مخفی در برگ)
+                    دهکده : ایوا (دهکده ی مخفی در صخره)
                 </h4>
                 <h5 class="text-white">
-                    نوع کاگه : هوکاگه
+                    نوع کاگه : تسوچیکاگه
                 </h5>
                 <hr class="text-warning">
                 <h6 class="text-white">
-                    هوکاگه ی اول : <a class="text-white text-decoration-none" href="">هاشیراما سنجو</a>
+                    تسوچیکاگه ی اول : <a class="text-white text-decoration-none" href="">ایشیکاوا</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی دوم : <a class="text-white text-decoration-none" href="">توبیراما سنجو</a>
+                    تسوچیکاگه ی دوم : <a class="text-white text-decoration-none" href="">مو</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی سوم : <a class="text-white text-decoration-none" href="">هیروزن ساراتوبی</a>
-                </h6>
-                <h6 class="text-white">
-                    هوکاگه ی چهارم : <a class="text-white text-decoration-none" href="">میناتو نامیکازه</a>
-                </h6>
-                <h6 class="text-white">
-                    هوکاگه ی پنجم : <a class="text-white text-decoration-none" href="">تسوناده سنجو</a>
+                    تسوچیکاگه ی سوم : <a class="text-white text-decoration-none" href="">اونوکی</a>
                 </h6>
             </div>
         </header>
@@ -69,17 +63,7 @@
             <ul>
                 <li class="my-3">
                     <h4>
-                         دهکده ی پنهان در برگ (کونوها)
-                    </h4>
-                </li>
-                <li class="my-3">
-                    <h4>
-                        دره پایان
-                    </h4>
-                </li>
-                <li class="my-3">
-                    <h4>
-                        کوه هوکاگه ها
+                         دهکده ی پنهان در صخره (ایوا)
                     </h4>
                 </li>
             </ul>
@@ -96,32 +80,7 @@
             <ul>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین موج
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آب داغ
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین صدا
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آهن
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آبشار
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین چمن
+                        سرزمین سنگ
                     </a>
                 </li>
                 <li class="my-3">
@@ -131,7 +90,12 @@
                 </li>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین رودخانه
+                        سرزمین چمن
+                    </a>
+                </li>
+                <li class="my-3">
+                    <a class="text-decoration-none text-warning fs-5" href="">
+                        سرزمین آبشار
                     </a>
                 </li>
             </ul>
