--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">شخصیت ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">جوتسو ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">اصطلاح ها</a>
+            <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">مکان ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">پدیده ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">درجه بندی ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">تصویر ها</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">ویدیو ها</a>
+            <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">بازی های ما</a>
             <a class="nav_title rounded-3 fs-3 mini_titles px-4 py-2 text-decoration-none text-warning fw-bolder">درباره ی ما</a>
         </nav>
         <!-- nav end !-->
@@ -46,7 +48,7 @@
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     پیش از تأسیس کونوها ، قبایل نینجا در نبردهای بی‌پایان برای قدرت و بقا می‌جنگیدند ...
                 </p>
-                <span class="pt-5 mt-3">
+                <span class="pt-md-5 pt-sm-0 mt-3">
                     <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
                 </span>
@@ -58,7 +60,7 @@
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     بیجوها، موجودات افسانه‌ای دم‌دار، پس از جدایی از چاکرای ده‌دمی در جهان پراکنده شدند...
                 </p>
-                <span class="pt-5 mt-3">
+                <span class="pt-md-5 pt-sm-0 mt-3">
                     <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
                 </span>
@@ -70,7 +72,7 @@
                 <p class="mt-5 fs-4 rounded-3 text-warning w-50">
                     آکاتسکی با گردهم‌آوردن خطرناک‌ترین نینجاهای سرکش، به سازمانی مخوف تبدیل شد...
                 </p>
-                <span class="pt-5 mt-3">
+                <span class="pt-md-5 pt-sm-0 mt-3">
                     <a class="col-sm-11 border border-warning slider-icon rounded-3 text-decoration-none text-warning bg-dark px-3 py-2 mt-5"
                     href="">نمایش کامل</a>
                 </span>
@@ -83,7 +85,7 @@
         <!-- none start !-->
         <section class="my-5 In_made_err_bg d-flex align-items-center justify-content-center">
             <div class="container d-flex align-items-center justify-content-center">
-                <h1 class="text-warning fw-bolder fs_BIG">در دست ساخت ...</h1>
+                <h1 class="text-warning fw-bolder fs-big">در دست ساخت ...</h1>
             </div>
         </section>
         <!-- none end !-->
@@ -93,7 +95,7 @@
         <!-- footer start !-->
         <footer class="py-5">
             <div class="container row justify-content-between d-flex">
-                <div class="col-6 col-sm-4 col-md-3 border-end border-warning border-3">
+                <div class="col-sm-4 col-md-3 border-end border-warning border-3">
                     <h3 class="text-warning mb-4">درباره ی ما</h3>
                     <ul>
                         <li>
@@ -113,7 +115,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-6 col-sm-4 col-md-3 border-end border-warning border-3">
+                <div class="col-sm-4 col-md-3 border-end border-warning border-3">
                     <h3 class="text-warning mb-4">ما را دنبال کنید</h3>
                     <ul>
                         <li>
