--- a/assets/html/lands/land-of-rain.html
+++ b/assets/html/lands/land-of-rain.html
@@ -15,34 +15,25 @@
         <!-- header start -->
         <header class="container">
             <div class="col-md-6 rounded-top border border-3 border-warning">
-                <img class="img-fluid" src="../../img/lands/fire.jpg" alt="">
+                <img class="img-fluid" src="../../img/lands/rain.png" alt="">
             </div>
             <div class="col-md-6 rounded-bottom border border-3 border-top-0 border-warning py-3 px-4">
                 <h1 class="text-warning">
-                    نام : سرزمین آتش
+                    نام : سرزمین باران
                 </h1>
                 <hr class="text-warning">
                 <h4 class="text-white">
-                    دهکده : کونوها (دهکده ی مخفی در برگ)
+                    دهکده : آمه (دهکده ی مخفی در باران)
                 </h4>
                 <h5 class="text-white">
-                    نوع کاگه : هوکاگه
+                    نوع کاگه : کاگه ندارد
                 </h5>
                 <hr class="text-warning">
                 <h6 class="text-white">
-                    هوکاگه ی اول : <a class="text-white text-decoration-none" href="">هاشیراما سنجو</a>
+                    رهبر اول : <a class="text-white text-decoration-none" href="">؟؟؟</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی دوم : <a class="text-white text-decoration-none" href="">توبیراما سنجو</a>
-                </h6>
-                <h6 class="text-white">
-                    هوکاگه ی سوم : <a class="text-white text-decoration-none" href="">هیروزن ساراتوبی</a>
-                </h6>
-                <h6 class="text-white">
-                    هوکاگه ی چهارم : <a class="text-white text-decoration-none" href="">میناتو نامیکازه</a>
-                </h6>
-                <h6 class="text-white">
-                    هوکاگه ی پنجم : <a class="text-white text-decoration-none" href="">تسوناده سنجو</a>
+                    رهبر دوم : <a class="text-white text-decoration-none" href="">هانزو سمندر</a>
                 </h6>
             </div>
         </header>
@@ -69,17 +60,12 @@
             <ul>
                 <li class="my-3">
                     <h4>
-                         دهکده ی پنهان در برگ (کونوها)
+                         دهکده ی پنهان در باران (آمه)
                     </h4>
                 </li>
                 <li class="my-3">
                     <h4>
-                        دره پایان
-                    </h4>
-                </li>
-                <li class="my-3">
-                    <h4>
-                        کوه هوکاگه ها
+                        برج پین
                     </h4>
                 </li>
             </ul>
@@ -96,27 +82,7 @@
             <ul>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین موج
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آب داغ
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین صدا
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آهن
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آبشار
+                        سرزمین آتش
                     </a>
                 </li>
                 <li class="my-3">
@@ -126,12 +92,17 @@
                 </li>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین باران
+                        سرزمین زمین
                     </a>
                 </li>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین رودخانه
+                        سرزمین سنگ
+                    </a>
+                </li>
+                <li class="my-3">
+                    <a class="text-decoration-none text-warning fs-5" href="">
+                        سرزمین باد
                     </a>
                 </li>
             </ul>
