--- a/assets/html/lands/land-of-wind.html
+++ b/assets/html/lands/land-of-wind.html
@@ -15,34 +15,34 @@
         <!-- header start -->
         <header class="container">
             <div class="col-md-6 rounded-top border border-3 border-warning">
-                <img class="img-fluid" src="../../img/lands/fire.jpg" alt="">
+                <img class="img-fluid" src="../../img/lands/wind.jpg" alt="">
             </div>
             <div class="col-md-6 rounded-bottom border border-3 border-top-0 border-warning py-3 px-4">
                 <h1 class="text-warning">
-                    نام : سرزمین آتش
+                    نام : سرزمین باد
                 </h1>
                 <hr class="text-warning">
                 <h4 class="text-white">
-                    دهکده : کونوها (دهکده ی مخفی در برگ)
+                    دهکده : سونا (دهکده ی مخفی در شن)
                 </h4>
                 <h5 class="text-white">
-                    نوع کاگه : هوکاگه
+                    نوع کاگه : کازه کاگه
                 </h5>
                 <hr class="text-warning">
                 <h6 class="text-white">
-                    هوکاگه ی اول : <a class="text-white text-decoration-none" href="">هاشیراما سنجو</a>
+                    کازه کاگه ی اول : <a class="text-white text-decoration-none" href="">رتو</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی دوم : <a class="text-white text-decoration-none" href="">توبیراما سنجو</a>
+                    کازه کاگه ی دوم : <a class="text-white text-decoration-none" href="">شامون</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی سوم : <a class="text-white text-decoration-none" href="">هیروزن ساراتوبی</a>
+                    کازه کاگه ی سوم : <a class="text-white text-decoration-none" href="">؟؟؟</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی چهارم : <a class="text-white text-decoration-none" href="">میناتو نامیکازه</a>
+                    کازه کاگه ی چهارم : <a class="text-white text-decoration-none" href="">راسا</a>
                 </h6>
                 <h6 class="text-white">
-                    هوکاگه ی پنجم : <a class="text-white text-decoration-none" href="">تسوناده سنجو</a>
+                    کازه کاگه ی پنجم : <a class="text-white text-decoration-none" href="">گارا</a>
                 </h6>
             </div>
         </header>
@@ -69,17 +69,7 @@
             <ul>
                 <li class="my-3">
                     <h4>
-                         دهکده ی پنهان در برگ (کونوها)
-                    </h4>
-                </li>
-                <li class="my-3">
-                    <h4>
-                        دره پایان
-                    </h4>
-                </li>
-                <li class="my-3">
-                    <h4>
-                        کوه هوکاگه ها
+                         دهکده ی پنهان در شن (سونا)
                     </h4>
                 </li>
             </ul>
@@ -96,32 +86,7 @@
             <ul>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین موج
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آب داغ
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین صدا
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آهن
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین آبشار
-                    </a>
-                </li>
-                <li class="my-3">
-                    <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین چمن
+                        سرزمین رودخانه
                     </a>
                 </li>
                 <li class="my-3">
@@ -131,7 +96,7 @@
                 </li>
                 <li class="my-3">
                     <a class="text-decoration-none text-warning fs-5" href="">
-                        سرزمین رودخانه
+                        سرزمین سنگ
                     </a>
                 </li>
             </ul>
